--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Rationalism'
 - !lcc 'BL'
+- GITenberg
 title: My Path to Atheism
 url: http://www.gutenberg.org/ebooks/37234
